<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black200"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewBateriaStatus"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/bateria_status" />

    <TextView
        android:id="@+id/textViewNivelBateria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="0%"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#46CBF3EC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="@drawable/background_one"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/on" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/alarme_off"
                android:textColor="@color/verde200" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_one"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/verde200"
                app:srcCompat="@drawable/baseline_whatshot_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/temperatura"
                    android:textColor="@color/verde200" />

                <TextView

                    android:id="@+id/textviewTemperatura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="25°F"
                    android:textColor="@color/verde50" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_one"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/verde200"
                app:srcCompat="@drawable/baseline_flash_on_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/voltagem"
                    android:textColor="@color/verde200" />

                <TextView

                    android:id="@+id/textviewVoltagem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3000m"
                    android:textColor="@color/verde50" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_one"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/verde200"
                app:srcCompat="@drawable/baseline_battery_4_bar_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/status"
                    android:textColor="@color/verde200" />

                <TextView

                    android:id="@+id/textviewStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Descarregando"
                    android:textColor="@color/verde50" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_one"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/verde200"
                app:srcCompat="@drawable/plug" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/conectado"
                    android:textColor="@color/verde200" />

                <TextView

                    android:id="@+id/textviewConectado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Não"
                    android:textColor="@color/verde50" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_one"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/verde200"
                app:srcCompat="@drawable/baseline_health_and_safety_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/saude"
                    android:textColor="@color/verde200" />

                <TextView

                    android:id="@+id/textviewSaude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/boa"
                    android:textColor="@color/verde50" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_one"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/verde200"
                app:srcCompat="@drawable/cpu" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tecnologia"
                    android:textColor="@color/verde200" />

                <TextView

                    android:id="@+id/textviewTecnologia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Li-On"
                    android:textColor="@color/verde50" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewBatteryLevelChanged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BatteryLevelChanged"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textViewBatteryStatusChanged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BatteryStatusChanged"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textViewBatteryPluggedTypeChanged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BatteryPluggedTypeChanged"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textViewBatteryTemperatureChanged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BatteryTemperatureChanged"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textViewBatteryVoltageChanged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BatteryVoltageChanged"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textViewBatteryHealthChanged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BatteryHealthChanged"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textViewBatteryCapacityChanged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BatteryCapacityChanged"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textViewWirelessChargingStateChanged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="WirelessChargingStateChanged"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textViewBatteryPresentChanged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BatteryPresentChanged"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textViewSmallIconChanged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SmallIconChanged"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textViewBatteryLowChanged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BatteryLowChanged"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textViewPowerSaveModeChanged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PowerSaveModeChanged"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textViewBatteryTechnologyChanged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="onBatteryTechnologyChanged"
        android:visibility="gone"
        tools:visibility="gone" />
</LinearLayout>